<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">car park search</string>
    <string name="menuSettings">Settings</string>
  
   
 
    
    <string name="prompt_location">Location:</string>
    <string name="map_info">Map information</string>
    <string name="normal">Normal</string>
    <string name="sattelite">Satellite</string>
    <string name="none">None</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="current_location">Current Location</string>
    <string name="go">Go</string>
    <string name="direction">direction</string>
    <string name="list">list</string>
    <string name="menureset">Reset</string>
    <string name="title_activity_newp">Newp</string>
    <string name="hello_world">Hello world!</string>
    <string name="ntitle">"Title:  "</string>
    <string name="ndesc">"Description:   "</string>
    
    
    
      <string name="action_search">搜索</string>
    <string name="action_plus">功能</string>
    <string name="action_album">我的相册</string>
    <string name="action_collection">我的收藏</string>
    <string name="action_card">我的银行卡</string>
    <string name="action_settings">设置</string>
    <string name="action_feed">意见反馈</string>
    <string name="plus_group_chat">发起群聊</string>
    <string name="plus_add_friend">添加朋友</string>
    <string name="plus_video_chat">视频聊天</string>
    <string name="plus_scan">扫一扫</string>
    <string name="plus_take_photo">拍照分享</string>

</resources>
