<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/mapTypeNormal"
        android:title="@string/normal"/>
    <item
        android:id="@+id/mapTypeSatellite"
        android:title="@string/sattelite"/>
    <item
        android:id="@+id/mapTypeTerrain"
        android:title="@string/terrain"/>
  
   
    <item
        android:id="@+id/gotoCurrentLocation"
        android:showAsAction="always"
        android:title="@string/current_location"/>
   
    <item
        android:id="@+id/list"
         android:orderInCategory="100"
        android:showAsAction="never"
       android:title="@string/list"/> 
    <item 
          android:id="@+id/menuLogout" 
	      android:title="Logout" 
	      android:orderInCategory="100"
          android:showAsAction="never"
          android:onClick="logout"/>
   
    
     

</menu>